...
            "value": "Proton-Konto und Einstellungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Proton Account and Settings"
          }
        }
      }
    },
    "library.options": {
      "extractionState": "manual",
...
            "value": "Sammlungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Collections"
          }
        }
      }
    },
    "tab.map": {
      "extractionState": "manual",
...
            "value": "Schließen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        }
      }
    },
    "viewer.favorite_action": {
      "extractionState": "manual",
...
